# CS263-FinalProject

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
SensiTaint/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  core  runtime_helpers.c  sensitaint  sensitaint.cc  sensitaint.hh  sensitive.h  test  test.c  test.ll  test.objdump  utils.cc  utils.hh
SensiTaint/runtime/: hashmap.c  hashmap.h  runtime_helpers.c
test_dir/: README.md  plot_benchmark_comparison.py  results.csv  results.json  scaling_results_2.csv  scaling_results_2.json  scan_core.py  sensitive.h  test.c  test.c.bc  test_baseline  test_modified  test_scaling.c  test_scaling_baseline
test_dir/testing_binaries/: test_instrumented  test_scaling_instrumented
test_dir/testing_scripts/: plot_benchmark_memory.py  plot_benchmark_runtime.py
test_dir/testing_scripts/results/: scaling_baseline_results.json  scaling_instrumented_results.json
